Added Floor Plan Vacuum Icon

--- a/www/custom_ui/floorplan/home_vacuum.css
+++ b/www/custom_ui/floorplan/home_vacuum.css
@@ -13,7 +13,7 @@ svg, svg * {
   stroke-opacity: 1 !important;
 }
 
-/* Bootstrap succsss */
+/* Bootstrap succss */
 
 .success-text {
   fill: #3c763d !important;
